--- a/tex/sample-exercises.tex
+++ b/tex/sample-exercises.tex
@@ -739,16 +739,55 @@ A=\begin{bmatrix}1&2&3\\4&5&6\\7&8&9\end{bmatrix}
 
 \begin{problem}{G2}
 Find the determinant of the matrix
-\[A=\begin{bmatrix} 1 & 3 & 0 & -1 \\ 1 & 1 & 2 & 4 \\ 1 & 1 & 1 & 3 \\ -3 & 1 & 2 & -5 \end{bmatrix}\]
+\[
+  A
+    =
+  \begin{bmatrix}
+    1 & 3 & 0 & -1 \\
+    1 & 1 & 2 & 4 \\
+    1 & 1 & 1 & 3 \\
+    -3 & 1 & 2 & -5
+  \end{bmatrix}
+\]
 \end{problem}
 \begin{solution}
-We first apply a row operation (subtract row three from row 2), and then perform Laplace expansion across the second row.  Then, we compute the $3 \times 3$ determinants by expanding down the first column and across the first row, respectively.
+Here is one possible solution, using row and column operations to first reduce
+the determinant to a \(3\times 3\) matrix and then applying the diagonal
+formula taught in calculus courses:
 \begin{align*}
-\det A &= \det \begin{bmatrix} 1 & 3 & 0 & -1 \\ 0 & 0 & 1 & 1 \\ 1 & 1 & 1 & 3 \\ -3 & 1 & 2 & -5 \end{bmatrix} =
+\det
+  \begin{bmatrix}
+    1 & 3 & 0 & -1 \\
+    1 & 1 & 2 & 4 \\
+    1 & 1 & 1 & 3 \\
+    -3 & 1 & 2 & -5
+  \end{bmatrix}
+&=
+\det \begin{bmatrix} 1 & 3 & 0 & -1 \\ 0 & 0 & 1 & 1 \\ 1 & 1 & 1 & 3 \\ -3 & 1 & 2 & -5 \end{bmatrix} =
+\det \begin{bmatrix} 1 & 3 & 0 & -1 \\ 0 & 0 & 1 & 0 \\ 1 & 1 & 1 & 2 \\ -3 & 1 & 2 & -7 \end{bmatrix} \\ &=
+-\det \begin{bmatrix} 1 & 3 & 0 & -1 \\ 1 & 1 & 1 & 2 \\ 0 & 0 & 1 & 0 \\ -3 & 1 & 2 & -7 \end{bmatrix} =
+-\det \begin{bmatrix} 1 & 3 & -1 \\ 1 & 1 & 2 \\ -3 & 1  & -7 \end{bmatrix} \\  &=
+-((-7-18-1)-(3+2-21)) \\
+ &=10
+ \end{align*}
+
+ And here is another possible solution, first applying a single row operation,
+ and then performing Laplace/cofactor expansions to reduce the determinant
+ to a linear combination of \(2\times 2\) determinants:
+
+ \begin{align*}
+\det
+   \begin{bmatrix}
+     1 & 3 & 0 & -1 \\
+     1 & 1 & 2 & 4 \\
+     1 & 1 & 1 & 3 \\
+     -3 & 1 & 2 & -5
+   \end{bmatrix}
+ &= \det \begin{bmatrix} 1 & 3 & 0 & -1 \\ 0 & 0 & 1 & 1 \\ 1 & 1 & 1 & 3 \\ -3 & 1 & 2 & -5 \end{bmatrix} =
  (-1) \det \begin{bmatrix} 1 & 3 & -1 \\ 1 & 1 & 3 \\ -3 & 1 & -5 \end{bmatrix} + (1) \det \begin{bmatrix} 1 & 3 & 0 \\ 1 & 1 & 1 \\ -3 & 1 & 2 \end{bmatrix} \\
  &= (-1) \left( (1) \det \begin{bmatrix} 1 & 3 \\ 1 & -5 \end{bmatrix} - (1) \det \begin{bmatrix} 3 & -1 \\ 1 & -5 \end{bmatrix} + (-3) \det \begin{bmatrix} 3 & -1 \\ 1 & 3 \end{bmatrix} \right) + \\
- &\phantom{=} (1) \left( (1) \det \begin{bmatrix} 1 & 1 \\ 1 & 2 \end{bmatrix} - (3) \det \begin{bmatrix} 1 & 1 \\ -3 & 2 \end{bmatrix} \right) \\
- &= (-1)\left( (1)(-8)-(1)(-14)+(-3)(10) \right) + (1) \left( (1)(1)-(3)(5) \right) \\
+ &\phantom{==} (1) \left( (1) \det \begin{bmatrix} 1 & 1 \\ 1 & 2 \end{bmatrix} - (3) \det \begin{bmatrix} 1 & 1 \\ -3 & 2 \end{bmatrix} \right) \\
+ % &= (-1)\left( (1)(-8)-(1)(-14)+(-3)(10) \right) + (1) \left( (1)(1)-(3)(5) \right) \\
  &= (-1) \left( -8+14-30 \right) + (1) \left(1-15 \right) \\
  &=10
  \end{align*}
@@ -768,7 +807,7 @@ The eigenvalues are the roots of the characteristic polynomial, $2$ and $3$.
 Find a basis for the eigenspace associated to the eigenvalue $3$ in the matrix \[\begin{bmatrix} -7 & -8 & 2 \\ 8 & 9 & -1 \\ \frac{13}{2} & 5 & 2 \end{bmatrix}.\]
 \end{problem}
 \begin{solution}
-\[\RREF(A-3I) = \RREF \begin{bmatrix} -10 & -8 & 2 \\ 8 & 6 & -1 \\ \frac{13}{2} & 5 & -1 \end{bmatrix} = \begin{bmatrix} 1 & 0 & 1 \\ 0 & 1 & -\frac{3}{2} \\ 0 & 0 & 0 \end{bmatrix}\]
+\[\RREF(A-3I) = \RREF \begin{bmatrix} -7-3 & -8 & 2 \\ 8 & 9-3 & -1 \\ \frac{13}{2} & 5 & 2-3 \end{bmatrix} = \RREF \begin{bmatrix} -10 & -8 & 2 \\ 8 & 6 & -1 \\ \frac{13}{2} & 5 & -1 \end{bmatrix} = \begin{bmatrix} 1 & 0 & 1 \\ 0 & 1 & -\frac{3}{2} \\ 0 & 0 & 0 \end{bmatrix}\]
 The eigenspace associated to $3$ is the kernel of $A-3I$, namely  \[\setBuilder{\begin{bmatrix} -a \\ \frac{3}{2} a \\ a \end{bmatrix}}{a \in \IR}\]
 which has a basis of \(\left\{ \begin{bmatrix} -1 \\ \frac{3}{2} \\ 1 \end{bmatrix} \right\}\).
 \end{solution}
