--- a/tex/modules/4-A/exercises/A1.tex
+++ b/tex/modules/4-A/exercises/A1.tex
@@ -1,50 +1,88 @@
-\begin{problem}{A1} 
- Determine if $T: \IR^2 \rightarrow \IR^2$ given by $T\left(\begin{bmatrix} x \\ y \end{bmatrix}\right) = \begin{bmatrix} e^{x} \\ e^y \end{bmatrix}$ is a linear transformation.
+\begin{problem}{A1}
+Consider the following maps of polynomials \(S: \P^6 \rightarrow \P^6\)
+and \(T:\P^6\rightarrow\P^6\) defined by
+\[S(f(x))= f(x)+3 \text{ and }T(f(x)) = f(x)+f(3).\]
+Show that one of these maps is a linear transformation, and that the other
+map is not.
 \end{problem}
 \begin{solution}
-It is not linear.  For example, $$\begin{bmatrix}e^2 \\ 1 \end{bmatrix} = T\left(\begin{bmatrix} 2 \\ 0 \end{bmatrix} \right) \neq 2 T\left(\begin{bmatrix} 1 \\ 0 \end{bmatrix}\right)=\begin{bmatrix} 2e \\ 1 \end{bmatrix}$$
-\end{solution}
-
-\begin{problem}{A1} 
-Let $T: \IR^2 \rightarrow \IR^2$ be given by $T\left(\begin{bmatrix}x \\ y  \end{bmatrix} \right) = \begin{bmatrix} x+y \\ \sqrt{x}+\sqrt{y} \end{bmatrix}$.  Determine if $T$ is a linear transformation.
-\end{problem}
-\begin{solution}
-$$T\left(\begin{bmatrix} 0 \\ 4 \end{bmatrix}\right) = \begin{bmatrix} 4 \\ 2 \end{bmatrix} \neq \begin{bmatrix} 4 \\ 4 \end{bmatrix} = 4T\left(\begin{bmatrix} 0 \\ 1 \end{bmatrix} \right)$$
-So $T$ is not a linear transformation.
+  \(T\) is linear, \(S\) is not.
 \end{solution}
 
 \begin{problem}{A1}
-Determine if $D: M_{2,2} \rightarrow \IR$ given by $D\left(\begin{bmatrix} a & b \\ c & d \end{bmatrix} \right) = ad-bc$ is a linear transformation or not.
+Consider the following maps of polynomials \(S: \P^4 \rightarrow \P^5\)
+and \(T:\P^4\rightarrow\P^5\) defined by
+\[S(f(x))= xf(x)-f(1) \text{ and }T(f(x)) = xf(x)-x.\]
+Show that one of these maps is a linear transformation, and that the other
+map is not.
 \end{problem}
 \begin{solution}
-$D(I)=1$ but $D(2I)=4 \neq 2D(I)$, so $D$ is not linear.
+  \(S\) is linear, \(T\) is not.
 \end{solution}
 
 \begin{problem}{A1}
-Determine if $D: M_{2,2} \rightarrow \IR$ given by $D\left(\begin{bmatrix} a & b \\ c & d \end{bmatrix} \right) = a-3c$ is a linear transformation or not.
+Consider the following maps of polynomials \(S: \P \rightarrow \P\)
+and \(T:\P\rightarrow\P\) defined by
+\[S(f(x))= f'(x)-f''(x) \text{ and }T(f(x)) = f(x)-(f(x))^2.\]
+Show that one of these maps is a linear transformation, and that the other
+map is not.
 \end{problem}
-
-\begin{problem}{A1}
-Determine if the map $T: \P^6  \rightarrow \P^6$ given by $T(f) = f(x)-f(0)$ is a linear transformation or not.
-\end{problem}
-
-\begin{problem}{A1}
-Determine if the map $T: \P^6  \rightarrow \P^7$ given by $T(f) = xf(x)-f(1)$ is a linear transformation or not.
-\end{problem}
-
-\begin{problem}{A1}
-Determine if the map $T: \P  \rightarrow \P$ given by $T(f) = f^{\prime}-f^{\prime \prime}$ is a linear transformation or not.
-\end{problem}
+\begin{solution}
+  \(S\) is linear, \(T\) is not.
+\end{solution}
 
 
 \begin{problem}{A1}
-Determine if the map $T: \P^3 \rightarrow \P^4$ given by $T(f(x))=xf(x)-f(x)$ is a linear transformation or not.
+Consider the following maps of polynomials \(S: \P^2 \rightarrow \P^4\)
+and \(T:\P^2\rightarrow\P^4\) defined by
+\[S(f(x))= x^2f(x) \text{ and }T(f(x)) = (f(x))^2.\]
+Show that one of these maps is a linear transformation, and that the other
+map is not.
 \end{problem}
+\begin{solution}
+  \(S\) is linear, \(T\) is not.
+\end{solution}
 
 \begin{problem}{A1}
-Determine if the map $T: \P^3 \rightarrow \IR^2$ given by $T(f(x))=\begin{bmatrix} f(0) \\ f(3) \end{bmatrix}$ is a linear transformation or not.
+Consider the following maps of polynomials \(S: \P \rightarrow \P\)
+and \(T:\P\rightarrow\P\) defined by
+\[S(f(x))= (f(x))^2+1 \text{ and }T(f(x)) = (x^2+1)f(x).\]
+Show that one of these maps is a linear transformation, and that the other
+map is not.
 \end{problem}
+\begin{solution}
+  \(T\) is linear, \(S\) is not.
+\end{solution}
 
 \begin{problem}{A1}
-Determine if the map $T: \IR^2 \rightarrow \P^2$ given by $T\left(\begin{bmatrix} a \\b \end{bmatrix} \right)= ax^2+b $ is a linear transformation or not.
+Consider the following maps of polynomials \(S: \P^2 \rightarrow \P^2\)
+and \(T:\P^2\rightarrow\P^2\) defined by
+\[S(ax^2+bx+c)= cx^2+bx+a \text{ and }T(ax^2+bx+c) = a^2x^2+b^2x+c^2.\]
+Show that one of these maps is a linear transformation, and that the other
+map is not.
 \end{problem}
+\begin{solution}
+  \(S\) is linear, \(T\) is not.
+\end{solution}
+
+\begin{problem}{A1}
+Consider the following maps of polynomials \(S: \P^2 \rightarrow \P^1\)
+and \(T:\P^2\rightarrow\P^1\) defined by
+\[S(ax^2+bx+c)= 2ax+b \text{ and }T(ax^2+bx+c) = a^2x+b.\]
+Show that one of these maps is a linear transformation, and that the other
+map is not.
+\end{problem}
+\begin{solution}
+  \(S\) is linear, \(T\) is not.
+\end{solution}
+
+\begin{problem}{A1}
+Consider the following maps of polynomials \(S: \P^2 \rightarrow \P^3\)
+and \(T:\P^2\rightarrow\P^3\) defined by
+\[S(ax^2+bx+c)= ax^3+bx^2+cx \text{ and }T(ax^2+bx+c) = abcx^3.\]
+Show that one of these maps is a linear transformation, and that the other
+map is not.
+\end{problem}
+\begin{solution}
+  \(S\) is linear, \(T\) is not.
+\end{solution}
