Fix grammar in S1 exercises

--- a/tex/modules/3-S/exercises/S1.tex
+++ b/tex/modules/3-S/exercises/S1.tex
@@ -28,7 +28,7 @@ Determine if the vectors in the set
     \begin{bmatrix} 1 \\ 3 \\ -2 \end{bmatrix}
   }
 \)
-is linearly dependent or linearly independent
+are linearly dependent or linearly independent
 \end{problem}
 \begin{solution}
 \[
@@ -43,7 +43,7 @@ Since there is a nonpivot column, the set is linearly dependent.
 
 
 \begin{problem}{S1}
-Determine if the vectors in the set \(\setList{ \begin{bmatrix} -3 \\ 8 \\ 0 \end{bmatrix}, \begin{bmatrix} 1 \\ 2 \\ 2 \end{bmatrix}, \begin{bmatrix} 0 \\ -1 \\ 3 \end{bmatrix} }\) is  linearly dependent or linearly independent
+Determine if the vectors in the set \(\setList{ \begin{bmatrix} -3 \\ 8 \\ 0 \end{bmatrix}, \begin{bmatrix} 1 \\ 2 \\ 2 \end{bmatrix}, \begin{bmatrix} 0 \\ -1 \\ 3 \end{bmatrix} }\) are  linearly dependent or linearly independent
 \end{problem}
 \begin{solution}
 \[\RREF\left( \begin{bmatrix}-3 & 1 & 0 \\ 8 & 2 & -1 \\ 0 & 2 & 3 \end{bmatrix}\right) = \begin{bmatrix} 1 & 0 & 0 \\ 0 & 1 & 0 \\ 0 & 0 & 1 \end{bmatrix}\]
@@ -51,7 +51,7 @@ Every column is a pivot column, therefore the set is linearly independent.
 \end{solution}
 
 \begin{problem}{S1}
-Determine if the vectors in the set \(\setList{ \begin{bmatrix} -3 \\ -8 \\ 0 \end{bmatrix}, \begin{bmatrix} 1 \\ 2 \\ 2 \end{bmatrix}, \begin{bmatrix} 0 \\ -1 \\ 3 \end{bmatrix} }\) is  linearly dependent or linearly independent
+Determine if the vectors in the set \(\setList{ \begin{bmatrix} -3 \\ -8 \\ 0 \end{bmatrix}, \begin{bmatrix} 1 \\ 2 \\ 2 \end{bmatrix}, \begin{bmatrix} 0 \\ -1 \\ 3 \end{bmatrix} }\) are  linearly dependent or linearly independent
 \end{problem}
 \begin{solution}
 \[\RREF\left( \begin{bmatrix}-3 & 1 & 0 \\ -8 & 2 & -1 \\ 0 & 2 & 3 \end{bmatrix}\right) = \begin{bmatrix} 1 & 0 & \frac{1}{2} \\ 0 & 1 & \frac{3}{2} \\ 0 & 0 & 0 \end{bmatrix}\]
@@ -61,7 +61,7 @@ This has a non pivot column, therefore the set is linearly dependent.
 
 
 \begin{problem}{S1}
-Determine if the vectors in the set \(\setList{\begin{bmatrix} 3 \\ -1 \\ 0 \\ 4 \end{bmatrix}, \begin{bmatrix} 1  \\ 2 \\ -2 \\ 1 \end{bmatrix}, \begin{bmatrix} 3 \\ -8 \\ 6 \\ 5 \end{bmatrix} }\)  is linearly dependent or linearly independent.
+Determine if the vectors in the set \(\setList{\begin{bmatrix} 3 \\ -1 \\ 0 \\ 4 \end{bmatrix}, \begin{bmatrix} 1  \\ 2 \\ -2 \\ 1 \end{bmatrix}, \begin{bmatrix} 3 \\ -8 \\ 6 \\ 5 \end{bmatrix} }\)  are linearly dependent or linearly independent.
 \end{problem}
 \begin{solution}
 \[\RREF\left(\begin{bmatrix} 3 & 1 & 3 \\ -1 & 2 & -8 \\ 0 & -2 & 6 \\ 4 & 1 & 5 \end{bmatrix} \right) = \begin{bmatrix} 1 & 0 & 2 \\ 0 & 1 & -3 \\ 0 & 0 & 0 \\ 0 & 0 & 0 \end{bmatrix}\]
@@ -69,7 +69,7 @@ Since the reduced row echelon form has a nonpivot column, the vectors are linear
 \end{solution}
 
 \begin{problem}{S1}
-Determine if the vectors in the set \(\setList{\begin{bmatrix} 3 \\ -1 \\ 1 \\ 4 \end{bmatrix}, \begin{bmatrix} 1  \\ 2 \\ -2 \\ 1 \end{bmatrix}, \begin{bmatrix} 3 \\ -8 \\ 6 \\ 5 \end{bmatrix} }\)  is linearly dependent or linearly independent.
+Determine if the vectors in the set \(\setList{\begin{bmatrix} 3 \\ -1 \\ 1 \\ 4 \end{bmatrix}, \begin{bmatrix} 1  \\ 2 \\ -2 \\ 1 \end{bmatrix}, \begin{bmatrix} 3 \\ -8 \\ 6 \\ 5 \end{bmatrix} }\)  are linearly dependent or linearly independent.
 \end{problem}
 \begin{solution}
 \[\RREF\left(\begin{bmatrix} 3 & 1 & 3 \\ -1 & 2 & -8 \\ 1 & -2 & 6 \\ 4 & 1 & 5 \end{bmatrix} \right) = \begin{bmatrix} 1 & 0 & 0 \\ 0 & 1 & 0 \\ 0 & 0 & 1 \\ 0 & 0 & 0 \end{bmatrix}\]
@@ -77,7 +77,7 @@ Since the reduced row echelon form has only pivot columns, the vectors are linea
 \end{solution}
 
 \begin{problem}{S1}
-Determine if the vectors in the set \(\setList{ \begin{bmatrix} 2 \\ 1 \\ -1 \\ 2 \end{bmatrix}, \begin{bmatrix} -1 \\ -3 \\ 1 \\ -2 \end{bmatrix}, \begin{bmatrix} 2 \\ -4 \\ 0 \\ 0 \end{bmatrix} } \) is linearly dependent or linearly independent.
+Determine if the vectors in the set \(\setList{ \begin{bmatrix} 2 \\ 1 \\ -1 \\ 2 \end{bmatrix}, \begin{bmatrix} -1 \\ -3 \\ 1 \\ -2 \end{bmatrix}, \begin{bmatrix} 2 \\ -4 \\ 0 \\ 0 \end{bmatrix} } \) are linearly dependent or linearly independent.
 \end{problem}
 \begin{solution}
 \[ \RREF \begin{bmatrix} 2 & -1 & 2 \\ 1 & -3 & -4 \\ -1 & 1 & 0 \\ 2 & -2 & 0 \end{bmatrix} = \begin{bmatrix} 1 & 0 & 2 \\ 0 & 1 & 2 \\ 0 & 0 & 0 \\ 0 & 0 & 0 \end{bmatrix} \]
@@ -85,7 +85,7 @@ Since the third column is not a pivot column, the set is linearly dependent.
 \end{solution}
 
 \begin{problem}{S1}
-Determine if the vectors in the set \(\setList{ \begin{bmatrix} 2 \\ 1 \\ -1 \\ 2 \end{bmatrix}, \begin{bmatrix} -1 \\ -3 \\ 1 \\ -2 \end{bmatrix}, \begin{bmatrix} 2 \\ -4 \\ 0 \\ 0 \end{bmatrix}, \begin{bmatrix} 1 \\ 0 \\ 0 \\ 3 \end{bmatrix} } \) is linearly dependent or linearly independent.
+Determine if the vectors in the set \(\setList{ \begin{bmatrix} 2 \\ 1 \\ -1 \\ 2 \end{bmatrix}, \begin{bmatrix} -1 \\ -3 \\ 1 \\ -2 \end{bmatrix}, \begin{bmatrix} 2 \\ -4 \\ 0 \\ 0 \end{bmatrix}, \begin{bmatrix} 1 \\ 0 \\ 0 \\ 3 \end{bmatrix} } \) are linearly dependent or linearly independent.
 \end{problem}
 \begin{solution}
 \[ \RREF \begin{bmatrix} 2 & -1 & 2  & 1\\ 1 & -3 & -4 & 0 \\ -1 & 1 & 0 & 0 \\ 2 & -2 & 0 & 3\end{bmatrix} = \begin{bmatrix} 1 & 0 & 2  & 0 \\ 0 & 1 & 2  & 0 \\ 0 & 0 & 0 & 1\\ 0 & 0 & 0 & 0 \end{bmatrix} \]
