--- a/tex/modules/4-A/exercises/A2.tex
+++ b/tex/modules/4-A/exercises/A2.tex
@@ -1,7 +1,7 @@
 \begin{problem}{A2}
-Let $T: \IR^3\rightarrow \IR^4$ be the linear transformation given by $$T\left(\begin{bmatrix} x \\ y \\ z \\  \end{bmatrix} \right) = \begin{bmatrix} -3x+y \\ -8x+2y-z \\ 2y+3z \\ 0 \end{bmatrix}.$$  
+Let $T: \IR^3\rightarrow \IR^4$ be the linear transformation given by $$T\left(\begin{bmatrix} x \\ y \\ z \\  \end{bmatrix} \right) = \begin{bmatrix} -3x+y \\ -8x+2y-z \\ 2y+3z \\ 0 \end{bmatrix}.$$
 \begin{enumerate}[(a)]
-\item Write the matrix for $T$ with respect to the standard bases of $\IR^3$ and $\IR^4$.
+\item Write the standard matrix for $T$.
 \item Compute \(T\left( \begin{bmatrix} 2 \\ 1 \\ -1 \end{bmatrix}\right)\)
 \end{enumerate}
 \end{problem}
@@ -9,7 +9,7 @@ Let $T: \IR^3\rightarrow \IR^4$ be the linear transformation given by $$T\left(\
 \begin{problem}{A2}
 Let $T: \IR^3\rightarrow \IR^4$ be the linear transformation given by the standard matrix
 \[ \begin{bmatrix}
-2 & 1 & -1 \\ 0 & 1 & 3 \\ 2 & -1 & 5 \\ 0 & 0 & 0 
+2 & 1 & -1 \\ 0 & 1 & 3 \\ 2 & -1 & 5 \\ 0 & 0 & 0
 \end{bmatrix}. \]
 \begin{enumerate}[(a)]
 \item Compute \( T\left( \begin{bmatrix}x\\ y \\ z \end{bmatrix} \right) \)
@@ -18,10 +18,13 @@ Let $T: \IR^3\rightarrow \IR^4$ be the linear transformation given by the standa
 \end{problem}
 
 \begin{problem}{A2}
-Let $T: \IR^2\rightarrow \IR^4$ be the linear transformation given by the standard matrix
-\[ \begin{bmatrix}
-2 & 1   \\ 0 & 1  \\ 2 & -1  \\ 3 & 3  
-\end{bmatrix}. \]
+Let $T: \IR^2\rightarrow \IR^4$ be the linear transformation given by the requirements
+\[ T(\vec e_1)=\begin{bmatrix}
+2   \\ 0   \\ 2  \\ 3
+\end{bmatrix} \text{ and }
+T(\vec e_2)=\begin{bmatrix}
+1   \\  1  \\ -1  \\ 3
+\end{bmatrix} \]
 \begin{enumerate}[(a)]
 \item Compute \( T\left( \begin{bmatrix}x\\ y  \end{bmatrix} \right) \)
 \item Compute \(T\left( \begin{bmatrix}  1 \\ -1 \end{bmatrix}\right)\)
@@ -29,17 +32,17 @@ Let $T: \IR^2\rightarrow \IR^4$ be the linear transformation given by the standa
 \end{problem}
 
 \begin{problem}{A2}
-Let $T: \IR^3\rightarrow \IR^4$ be the linear transformation given by $$T\left(\begin{bmatrix} x \\ y \\ z \\  \end{bmatrix} \right) = \begin{bmatrix} -3x+y \\ -8x+2y-z \\ 7x+2y+3z \\ 0 \end{bmatrix}.$$  
+Let $T: \IR^3\rightarrow \IR^4$ be the linear transformation given by $$T\left(\begin{bmatrix} x \\ y \\ z \\  \end{bmatrix} \right) = \begin{bmatrix} -3x+y \\ -8x+2y-z \\ 7x+2y+3z \\ 0 \end{bmatrix}.$$
 \begin{enumerate}[(a)]
-\item Write the matrix for $T$ with respect to the standard bases of $\IR^3$ and $\IR^4$.
+\item Write the standard matrix for $T$.
 \item Compute \( T\left( \begin{bmatrix}-2 \\ 0 \\ 3 \end{bmatrix} \right) \)
 \end{enumerate}
 \end{problem}
 
 \begin{problem}{A2}
-Let $T: \IR^3\rightarrow \IR^4$ be the linear transformation given by $$T\left(\begin{bmatrix} x \\ y \\ z \\  \end{bmatrix} \right) = \begin{bmatrix} -3x+y \\ -8x+2y-z \\ 2y+3z \\ 7x \end{bmatrix}.$$  
+Let $T: \IR^3\rightarrow \IR^4$ be the linear transformation given by $$T\left(\begin{bmatrix} x \\ y \\ z \\  \end{bmatrix} \right) = \begin{bmatrix} -3x+y \\ -8x+2y-z \\ 2y+3z \\ 7x \end{bmatrix}.$$
 \begin{enumerate}[(a)]
-\item Write the matrix for $T$ with respect to the standard bases of $\IR^3$ and $\IR^4$.
+\item Write the standard matrix for $T$.
 \item Compute \( T\left( \begin{bmatrix}-2 \\ 1 \\ 3 \end{bmatrix} \right) \)
 \end{enumerate}
 \end{problem}
@@ -57,7 +60,7 @@ $$\begin{bmatrix} 3 & 1 & 0 \\ -8 & 2 & -1 \\ 0 & 2 & 3 \\ 7 & 0 & 0 \end{bmatri
 \end{problem}
 
 \begin{problem}{A2}
-Let $T: \IR^4 \rightarrow \IR^2$ be the linear transformation given by the standard matrix 
+Let $T: \IR^4 \rightarrow \IR^2$ be the linear transformation given by the standard matrix
 $$\begin{bmatrix} 1 & 0 & 3 & 0 \\ 0 & 3 & -5 & 0 \end{bmatrix}.$$
 \begin{enumerate}[(a)]
 \item Compute \( T\left( \begin{bmatrix}x\\ y \\ z \\ w \end{bmatrix} \right) \)
@@ -68,27 +71,27 @@ $$\begin{bmatrix} 1 & 0 & 3 & 0 \\ 0 & 3 & -5 & 0 \end{bmatrix}.$$
 \end{solution}
 
 \begin{problem}{A2}
-Let $T: \IR^4 \rightarrow \IR^2$ be the linear transformation given by $$T\left(\begin{bmatrix} x_1 \\ x_2 \\ x_3 \\ x_4 \end{bmatrix} \right) = \begin{bmatrix} x_1+3x_3 \\ 3x_2-x_3 \end{bmatrix}.$$ 
+Let $T: \IR^4 \rightarrow \IR^2$ be the linear transformation given by $$T\left(\begin{bmatrix} x_1 \\ x_2 \\ x_3 \\ x_4 \end{bmatrix} \right) = \begin{bmatrix} x_1+3x_3 \\ 3x_2-x_3 \end{bmatrix}.$$
 \begin{enumerate}[(a)]
-\item Write the matrix for $T$ with respect to the standard bases of $\IR^4$ and $\IR^2$.
+\item Write the standard matrix for $T$.
 \item Compute \( T\left( \begin{bmatrix} 1 \\ 3 \\ -1 \\ 2 \end{bmatrix} \right) \)
 \end{enumerate}
 \end{problem}
 
 
 \begin{problem}{A2}
-Let $T: \IR^4 \rightarrow \IR^2$ be the linear transformation given by $$T\left(\begin{bmatrix} x_1 \\ x_2 \\ x_3 \\ x_4 \end{bmatrix} \right) = \begin{bmatrix} x_1+3x_3 \\ 3x_2-5x_3 \end{bmatrix}.$$ 
+Let $T: \IR^4 \rightarrow \IR^2$ be the linear transformation given by $$T\left(\begin{bmatrix} x_1 \\ x_2 \\ x_3 \\ x_4 \end{bmatrix} \right) = \begin{bmatrix} x_1+3x_3 \\ 3x_2-5x_3 \end{bmatrix}.$$
 \begin{enumerate}[(a)]
-\item Write the matrix for $T$ with respect to the standard bases of $\IR^4$ and $\IR^2$.
+\item Write the standard matrix for $T$.
 \item Compute \( T\left( \begin{bmatrix} 1 \\ 3 \end{bmatrix} \right) \)
 \end{enumerate}
 \end{problem}
 
 
 \begin{problem}{A2}
-Let $T: \IR^3 \rightarrow \IR$ be the linear transformation given by $$T\left(\begin{bmatrix} x_1 \\ x_2 \\ x_3  \end{bmatrix} \right) = \begin{bmatrix} x_2+3x_3 \end{bmatrix}.$$ 
+Let $T: \IR^3 \rightarrow \IR$ be the linear transformation given by $$T\left(\begin{bmatrix} x_1 \\ x_2 \\ x_3  \end{bmatrix} \right) = \begin{bmatrix} x_2+3x_3 \end{bmatrix}.$$
 \begin{enumerate}[(a)]
-\item Write the matrix for $T$ with respect to the standard bases of $\IR^3$ and $\IR$.
+\item Write the standard matrix for $T$.
 \item Compute \( T\left( \begin{bmatrix} 1 \\ 3 \\ -5\end{bmatrix} \right) \)
 \end{enumerate}
 \end{problem}
@@ -106,9 +109,9 @@ $$\begin{bmatrix} 0 & 1 & 3 \end{bmatrix}.$$
 \end{problem}
 
 \begin{problem}{A2}
-Let $T: \IR^3 \rightarrow \IR$ be the linear transformation given by $$T\left(\begin{bmatrix} x_1 \\ x_2 \\ x_3  \end{bmatrix} \right) = \begin{bmatrix} x_3+3x_1 \end{bmatrix}.$$ 
+Let $T: \IR^3 \rightarrow \IR$ be the linear transformation given by $$T\left(\begin{bmatrix} x_1 \\ x_2 \\ x_3  \end{bmatrix} \right) = \begin{bmatrix} x_3+3x_1 \end{bmatrix}.$$
 \begin{enumerate}[(a)]
-\item Write the matrix for $T$ with respect to the standard bases of $\IR^3$ and $\IR$.
+\item Write the standard matrix for $T$.
 \item Compute \( T\left( \begin{bmatrix} -1 \\ 7 \\ 3\end{bmatrix} \right) \)
 \end{enumerate}
 \end{problem}
