--- a/tex/course-slides.tex
+++ b/tex/course-slides.tex
@@ -15,7 +15,7 @@
 \input{modules/4-A/index.tex}
 \input{modules/5-M/index.tex}
 \input{modules/6-G/index.tex}
-\input{modules/7-X/index.tex}
+\input{modules/7-P/index.tex}
 
 
 
