fix make process

--- a/tex/slides/slides-7-P.tex
+++ b/tex/slides/slides-7-P.tex
@@ -2,11 +2,11 @@
 
 \usepackage{course-slides}
 
-\title{Module X}
+\title{Module P}
 \author{Math 237}
 
 \begin{document}
 
-\input{modules/7-X/index.tex}
+\input{modules/7-P/index.tex}
 
 \end{document}
