--- a/tex/modules/4-A/sections/2.tex
+++ b/tex/modules/4-A/sections/2.tex
@@ -111,7 +111,8 @@ Do you have enough information to compute
 \begin{fact}
 Consider any basis \(\{\vec b_1,\dots,\vec b_n\}\) for $V$.  Since every
 vector \(\vec v\) can be written \textit{uniquely} as a linear combination of
-basis vectors, \(x_1\vec b_1+\dots+ x_n\vec b_n\), we conclude that
+basis vectors, \(x_1\vec b_1+\dots+ x_n\vec b_n\), we may compute
+\(T(\vec v)\) as follows:
 
 \[
   T(\vec v)=T(x_1\vec b_1+\dots+ x_n\vec b_n)=
@@ -129,36 +130,32 @@ Since linear transformation \(T:\IR^n\to\IR^m\) is determined by
 the standard basis \(\{\vec e_1,\dots,\vec e_n\}\), it's convenient to
 store this information in the \(m\times n\) \term{standard matrix}
 \([T(\vec e_1) \,\cdots\, T(\vec e_n)]\).
-\end{definition}
 
+\vspace{1em}
 
-\begin{example}
-Let \(T: \IR^3 \rightarrow \IR^2\) be the linear map determined by
+For example,
+let \(T: \IR^3 \rightarrow \IR^2\) be the linear map determined by
 the following values for \(T\) applied to the standard basis of \(\IR^3\).
 
-\(
+\[\scriptsize
   T\left(\vec e_1 \right)
 =
   T\left(\begin{bmatrix} 1 \\ 0 \\ 0 \end{bmatrix} \right)
 =
   \begin{bmatrix} 3 \\ 2\end{bmatrix}
-\)
-\hfill
-\(
+\hspace{2em}
   T\left(\vec e_2 \right)
 =
   T\left(\begin{bmatrix} 0 \\ 1 \\ 0 \end{bmatrix} \right)
 =
   \begin{bmatrix} -1 \\ 4\end{bmatrix}
-\)
-\hfill
-\(
+\hspace{2em}
   T\left(\vec e_3 \right)
 =
   T\left(\begin{bmatrix} 0 \\ 0 \\ 1 \end{bmatrix} \right)
 =
   \begin{bmatrix} 5 \\ 0\end{bmatrix}
-\)
+\]
 
 Then the standard matrix corresponding to \(T\) is
 \[
@@ -166,43 +163,116 @@ Then the standard matrix corresponding to \(T\) is
 =
   \begin{bmatrix}3 & -1 & 5 \\ 2 & 4 & 0 \end{bmatrix}
 .\]
-\end{example}
+\end{definition}
 
-\begin{activity}{5}TODO
-  Let $T: \IR^3 \rightarrow \IR^2$ be the linear transformation given by
-$$T\left(\begin{bmatrix} x\\ y \\ z \end{bmatrix} \right) = \begin{bmatrix} x+3z \\ 2x-y-4z \end{bmatrix}$$
-Write the matrix corresponding to this linear transformation with respect to the standard basis.
+\begin{activity}{3}
+  Let $T: \IR^3 \rightarrow \IR^3$ be the linear transformation given by
+  \[
+    T\left(\vec e_1 \right)
+  =
+    \begin{bmatrix} 0 \\ 3 \\ -2\end{bmatrix}
+  \hspace{2em}
+    T\left(\vec e_2 \right)
+  =
+    \begin{bmatrix} -3 \\ 0 \\ 1\end{bmatrix}
+  \hspace{2em}
+    T\left(\vec e_3 \right)
+  =
+    \begin{bmatrix} 4 \\ -2 \\ 1\end{bmatrix}
+  \]
+Write the standard matrix \([T(\vec e_1) \,\cdots\, T(\vec e_n)]\) for \(T\).
 \end{activity}
 
 \begin{activity}{5}
-  Let $T: \IR^3 \rightarrow \IR^2$ be the linear transformation given by the standard matrix $$\begin{bmatrix} 3  & -2 & -1  \\ 4 & 5 & 2 \end{bmatrix}.$$
+  Let $T: \IR^3 \rightarrow \IR^2$ be the linear transformation given by
+$$T\left(\begin{bmatrix} x\\ y \\ z \end{bmatrix} \right) = \begin{bmatrix} x+3z \\ 2x-y-4z \end{bmatrix}$$
+Find the standard matrix for \(T\).
+\end{activity}
+
+\begin{fact}
+  Because every linear map \(T:\IR^m\to\IR^n\) has a linear combination
+  of the variables in each component, and thus
+  \(T(\vec e_i)\) yields exactly the coefficients of \(x_i\),
+  the standard matrix for \(T\) is simply an ordered list of
+  the coefficients of the \(x_i\):
+  \[
+    T\left(\begin{bmatrix}x\\y\\z\\w\end{bmatrix}\right)
+      =
+    \begin{bmatrix}
+      ax+by+cz+dw \\
+      ex+fy+gz+hw
+    \end{bmatrix}
+  \hspace{2em}
+    A
+      =
+    \begin{bmatrix}
+      a & b & c & d \\
+      e & f & g & h
+    \end{bmatrix}
+  \]
+\end{fact}
+
+\begin{activity}{5}
+  Let $T: \IR^3 \rightarrow \IR^3$ be the linear transformation given by the standard matrix
+  \[
+    \begin{bmatrix} 3  & -2 & -1  \\ 4 & 5 & 2 \\ 0 & -2 & 1 \end{bmatrix}
+  .\]
 
 Compute $T\left(\begin{bmatrix} x\\ y \\ z \end{bmatrix} \right) $.
 \end{activity}
 
-% \begin{fact}
-%   $T: \IR^n \rightarrow \IR^m$ is given by the matrix
-%   \([\vec v_1 \,\cdots\, \vec v_n]\) exactly when
-%   \(T\left(
-%     \begin{bmatrix}
-%       x_1 \\ \vdots \\ x_n
-%     \end{bmatrix}
-%   \right)
-%     =
-%   x_1\vec v_1 + \dots + x_n\vec v_n\).
-% \end{fact}
+\begin{activity}{5}
+  Let $T: \IR^3 \rightarrow \IR^3$ be the linear transformation given by the standard matrix
+  \[
+    \begin{bmatrix} 3  & -2 & -1  \\ 4 & 5 & 2 \\ 0 & -2 & 1 \end{bmatrix}
+  .\]
 
-\begin{activity}{10}
-Let $D: \P^3 \rightarrow \P^2$ be the derivative map \(D(f(x))=f'(x)\).
-(Earlier we showed this is a linear transformation.)
-\begin{subactivity}
-Write down an equivalent linear transformation $T: \IR^4 \rightarrow \IR^3$
-by converting \(\{1,x,x^2,x^3\}\) and \(\{D(1),D(x),D(x^2),D(x^3)\}\) into
-appropriate vectors in \(\IR^4\) and \(\IR^3\).
-\end{subactivity}
-\begin{subactivity}
-Write the standard matrix corresponding to $T$.
-\end{subactivity}
+Compute $T\left(\begin{bmatrix} 1\\ 2 \\ 3 \end{bmatrix} \right) $.
 \end{activity}
+
+\begin{fact}
+  To quickly compute \(T(\vec v)\) from its standard matrix \(A\),
+  compute the \textbf{dot product} (defined in Calculus 3) of each matrix row
+  with the vector. For example, if \(T\) has the standard matrix
+  \[
+    A = \begin{bmatrix} 1 & 2 & 3 \\ 0 & 1 & -2 \\ 2 & -1 & 0 \end{bmatrix}
+  \]
+  then for \(\vec v=\begin{bmatrix}x\\y\\z\end{bmatrix}\) we will write
+  \[
+    T(\vec v)
+      =
+    A\vec v
+      =
+    \begin{bmatrix} 1 & 2 & 3 \\ 0 & 1 & -2 \\ 2 & -1 & 0 \end{bmatrix}
+    \begin{bmatrix}x\\y\\z\end{bmatrix}
+      =
+    \begin{bmatrix}
+      1x+2y+3z\\
+      0x+1y-2z\\
+      2x-1y+0z
+    \end{bmatrix}
+  \]
+  and for \(\vec v=\begin{bmatrix}3\\0\\-2\end{bmatrix}\) we will write
+  \[
+    T(\vec v)
+      =
+    A\vec v
+      =
+    \begin{bmatrix} 1 & 2 & 3 \\ 0 & 1 & -2 \\ 2 & -1 & 0 \end{bmatrix}
+    \begin{bmatrix}3\\0\\-2\end{bmatrix}
+      =
+    \begin{bmatrix}
+      1(3)+2(0)+3(-2)\\
+      0(3)+1(0)-2(-2)\\
+      2(3)-1(0)+0(-2)
+    \end{bmatrix}
+      =
+    \begin{bmatrix}
+      -3\\
+      4\\
+      6
+    \end{bmatrix}
+  .\]
+\end{fact}
 
 \end{applicationActivities}
