add activity to end of A.2

--- a/tex/modules/4-A/sections/2.tex
+++ b/tex/modules/4-A/sections/2.tex
@@ -166,7 +166,7 @@ Then the standard matrix corresponding to \(T\) is
 \end{definition}
 
 \begin{activity}{3}
-  Let $T: \IR^3 \rightarrow \IR^3$ be the linear transformation given by
+  Let $T: \IR^4 \rightarrow \IR^3$ be the linear transformation given by
   \[
     T\left(\vec e_1 \right)
   =
@@ -179,6 +179,10 @@ Then the standard matrix corresponding to \(T\) is
     T\left(\vec e_3 \right)
   =
     \begin{bmatrix} 4 \\ -2 \\ 1\end{bmatrix}
+  \hspace{2em}
+    T\left(\vec e_3 \right)
+  =
+    \begin{bmatrix} 2 \\ 0 \\ 0\end{bmatrix}
   \]
 Write the standard matrix \([T(\vec e_1) \,\cdots\, T(\vec e_n)]\) for \(T\).
 \end{activity}
@@ -274,5 +278,25 @@ Compute $T\left(\begin{bmatrix} 1\\ 2 \\ 3 \end{bmatrix} \right) $.
     \end{bmatrix}
   .\]
 \end{fact}
+
+\begin{activity}{15}
+  Compute the following linear transformations of vectors given their
+  standard matrices.
+  \[
+    T\left(\begin{bmatrix}1\\2\end{bmatrix}\right)
+    \text{ for the standard matrix }
+    A=\begin{bmatrix}4&3\\0&-1\\1&1\\3&0\end{bmatrix}
+  \]
+  \[
+    T\left(\begin{bmatrix}1\\1\\0\\-3\end{bmatrix}\right)
+    \text{ for the standard matrix }
+    A=\begin{bmatrix}4&3&0&-1\\1&1&3&0\end{bmatrix}
+  \]
+  \[
+    T\left(\begin{bmatrix}0\\-2\\0\end{bmatrix}\right)
+    \text{ for the standard matrix }
+    A=\begin{bmatrix}4&3&0\\0&-1&3\\5&1&1\\3&0&0\end{bmatrix}
+  \]
+\end{activity}
 
 \end{applicationActivities}
