--- a/tex/modules/4-A/sections/2.tex
+++ b/tex/modules/4-A/sections/2.tex
@@ -122,7 +122,7 @@ basis vectors, \(x_1\vec b_1+\dots+ x_n\vec b_n\), we may compute
 Therefore any linear transformation \(T:V \rightarrow W\) can be defined
 by just describing the values of \(T(\vec b_i)\).
 
-Put another way, the basis vectors \term{determine} the transformation \(T\).
+Put another way, the images of the basis vectors \term{determine} the transformation \(T\).
 \end{fact}
 
 \begin{definition}
