--- a/tex/modules/4-A/sections/1.tex
+++ b/tex/modules/4-A/sections/1.tex
@@ -127,7 +127,7 @@ counterexample.
 \]
 
 Since the resulting vectors are different,
-\(T\) is a linear transformation.
+\(T\) is not a linear transformation.
 \end{example}
 
 \begin{fact}
