--- a/tex/modules/4-A/sections/3.tex
+++ b/tex/modules/4-A/sections/3.tex
@@ -6,18 +6,78 @@
 \begin{definition}
 Let $T: V \rightarrow W$ be a linear transformation.
 $T$ is called \term{injective} or \term{one-to-one} if $T$ does not map two distinct values to the same place.  More precisely, $T$ is injective if $T(\vec{v}) \neq T(\vec{w})$ whenever $\vec{v} \neq \vec{w}$.
-%$T$ is called \term{surjective} or \term{onto} if every element of $W$ is mapped to by an element of $V$.  More precisely, for every $\vec{w} \in W$, there is some $v \in V$ with $T(\vec{v})=\vec{w}$.
+
+\begin{center}
+\begin{tikzpicture}[x=0.15in,y=0.15in]
+  \begin{scope}[shift={(0,0)}]
+    \draw (0,0) -- (3,0);
+    \draw (0,0) -- (0,3);
+    \draw (0,0) -- (-2,-1);
+    \draw[thick,-latex,blue] (0,0) -- (2,1)
+          node[anchor=south west] {\(\vec v\)};
+    \draw[thick,-latex,red] (0,0) -- (1,2)
+          node[anchor=south west] {\(\vec w\)};
+  \end{scope}
+  \draw[dashed,-latex] (3,3) to [bend left=30] (7,3);
+  \begin{scope}[shift={(9,0.5)}]
+    \draw (-2,0) -- (2,0);
+    \draw (0,-2) -- (0,2);
+    \draw[thick,-latex,blue] (0,0) -- (-1.5,1)
+          node[anchor=south east] {\(T(\vec v)\)};
+    \draw[thick,-latex,red] (0,0) -- (1.5,-2)
+          node[anchor=south west] {\(T(\vec w)\)};
+  \end{scope}
+  \node[anchor=north] at (5,-1) {injective};
+\end{tikzpicture}
+\hspace{3em}
+\begin{tikzpicture}[x=0.15in,y=0.15in]
+  \begin{scope}[shift={(0,0)}]
+    \draw (0,0) -- (3,0);
+    \draw (0,0) -- (0,3);
+    \draw (0,0) -- (-2,-1);
+    \draw[thick,-latex,blue] (0,0) -- (2,1)
+          node[anchor=south west] {\(\vec v\)};
+    \draw[thick,-latex,red] (0,0) -- (1,2)
+          node[anchor=south west] {\(\vec w\)};
+  \end{scope}
+  \draw[dashed,-latex] (3,3) to [bend left=30] (7,3);
+  \begin{scope}[shift={(9,0.5)}]
+    \draw (-2,0) -- (2,0);
+    \draw (0,-2) -- (0,2);
+    \draw[thick,-latex,purple] (0,0) -- (0.5,2)
+          node[anchor=south west] {\(T(\vec v)=T(\vec w)\)};
+  \end{scope}
+  \node[anchor=north] at (5,-1) {not injective};
+\end{tikzpicture}
+\end{center}
 \end{definition}
 
-\begin{activity}{5}
-Let $T: \IR^2 \rightarrow \IR^3$ be given by $$T\left(\begin{bmatrix}x \\ y \end{bmatrix} \right) = \begin{bmatrix} x \\ y \\ 0 \end{bmatrix}.$$
-The standard matrix of $T$ is thus $\begin{bmatrix} 1 & 0 \\ 0 & 1 \\ 0 & 0 \end{bmatrix}$. \\
-Is $T$ injective?
+\begin{activity}{3}
+Let $T: \IR^3 \rightarrow \IR^2$ be given by
+\[
+  T\left(\begin{bmatrix}x \\ y\\z \end{bmatrix} \right)
+    =
+  \begin{bmatrix} x \\ y \end{bmatrix}
+    \hspace{3em}
+    \text{with standard matrix }
+  \begin{bmatrix} 1 & 0 & 0 \\ 0 & 1 & 0 \end{bmatrix}
+\]
+Show that \(T\) is not injective by finding two different vectors
+\(\vec v,\vec w\in\IR^3\) such that \(T(\vec v)=T(\vec w)\).
 \end{activity}
 
-\begin{activity}{5}
-Let $T: \IR^3 \rightarrow \IR^2$ be given by $$T\left(\begin{bmatrix} x \\ y \\ z \end{bmatrix} \right) = \begin{bmatrix} x \\ y \end{bmatrix}.$$  The standard matrix of $T$ is thus $\begin{bmatrix} 1 & 0 &0  \\ 0 & 1 & 0 \end{bmatrix}$.\\
-Is $T$ injective?
+\begin{activity}{2}
+Let $T: \IR^2 \rightarrow \IR^3$ be given by
+\[
+  T\left(\begin{bmatrix}x \\ y \end{bmatrix} \right)
+    =
+  \begin{bmatrix} x \\ y \\ 0 \end{bmatrix}
+    \hspace{3em}
+    \text{with standard matrix }
+  \begin{bmatrix} 1 & 0 \\ 0 & 1 \\ 0 & 0 \end{bmatrix}
+\]
+Is $T$ injective? (That is, do different vectors always transform into
+different vectors?)
 \end{activity}
 
 \begin{definition}
@@ -25,46 +85,132 @@ Let $T: V \rightarrow W$ be a linear transformation.
 $T$ is called \term{surjective} or \term{onto} if every element of $W$ is mapped to by an element of $V$.  More precisely, for every $\vec{w} \in W$, there is some $\vec{v} \in V$ with $T(\vec{v})=\vec{w}$.
 \end{definition}
 
-\begin{activity}{5}
-Let $T: \IR^2 \rightarrow \IR^3$ be given by $$T\left(\begin{bmatrix}x \\ y \end{bmatrix} \right) = \begin{bmatrix} x \\ y \\ 0 \end{bmatrix}.$$
-The standard matrix of $T$ is thus $\begin{bmatrix} 1 & 0 \\ 0 & 1 \\ 0 & 0 \end{bmatrix}$. \\
+\begin{activity}{3}
+Let $T: \IR^2 \rightarrow \IR^3$ be given by
+\[
+  T\left(\begin{bmatrix}x \\ y \end{bmatrix} \right)
+    =
+  \begin{bmatrix} x \\ y \\ 0 \end{bmatrix}
+    \hspace{3em}
+    \text{with standard matrix }
+  \begin{bmatrix} 1 & 0 \\ 0 & 1 \\ 0 & 0 \end{bmatrix}
+\]
+Find a vector in \(\IR^3\) that
+\(T\left(\begin{bmatrix}x \\ y \end{bmatrix} \right)\) can never equal.
 Is $T$ surjective?
 \end{activity}
 
-\begin{activity}{5}
-Let $T: \IR^3 \rightarrow \IR^2$ be given by $$T\left(\begin{bmatrix} x \\ y \\ z \end{bmatrix} \right) = \begin{bmatrix} x \\ y \end{bmatrix}.$$  The standard matrix of $T$ is thus $\begin{bmatrix} 1 & 0 &0  \\ 0 & 1 & 0 \end{bmatrix}$.\\
-Is $T$ surjective?
+\begin{activity}{2}
+Let $T: \IR^3 \rightarrow \IR^2$ be given by
+\[
+  T\left(\begin{bmatrix}x \\ y\\z \end{bmatrix} \right)
+    =
+  \begin{bmatrix} x \\ y \end{bmatrix}
+    \hspace{3em}
+    \text{with standard matrix }
+  \begin{bmatrix} 1 & 0 & 0 \\ 0 & 1 & 0 \end{bmatrix}
+\]
+Is $T$ surjective? (That is, can every vector in \(\IR^2\) be obtained by
+using \(T\) to transform a vector in \(\IR^3\)?)
 \end{activity}
+
+\begin{observation}
+As we will see, it's no coincidence that the \(\RREF\) of the
+injective map's standard matrix
+\[
+  \begin{bmatrix} 1 & 0 & 0 \\ 0 & 1 & 0 \end{bmatrix}
+\]
+has a non-pivot column. Similarly, the \(\RREF\) of the surjective map's
+standard matrix
+\[
+  \begin{bmatrix} 1 & 0 \\ 0 & 1 \\ 0 & 0 \end{bmatrix}
+\]
+has a non-pivot (zero) row.
+\end{observation}
 
 
 \begin{definition}
 Let $T: V \rightarrow W$ be a linear transformation.  The \term{kernel} of $T$
 is an important subspace of \(V\) defined by
 \[
-\ker T = \left\{ \vec{v} \in V\ \big|\ T(\vec{v})=\vec{0}\right\}
+\ker T = \left\{ \vec{v} \in V\ \big|\ T(\vec{v})=\vec{z}\right\}
 \]
+
+\begin{center}
+  \begin{tikzpicture}[x=0.15in,y=0.15in]
+    \begin{scope}[shift={(0,0)}]
+      \draw (0,0) node[anchor=north west] {\(\ker T\)} -- (3,0);
+      \draw (0,0) -- (0,3);
+      \draw (0,0)  -- (-2,-1);
+      \draw[thick,latex-latex,blue] (-3,-3) -- (3,3);
+    \end{scope}
+    \draw[dashed,-latex] (3.5,3) to [bend left=30] (7,3);
+    \begin{scope}[shift={(9,0.5)}]
+      \draw (-2,0) -- (2,0);
+      \draw (0,-2) -- (0,2);
+      \fill[blue] (0,0) circle (0.2)
+            node[anchor=south east] {\(\vec{0}\)};
+    \end{scope}
+  \end{tikzpicture}
+\end{center}
 \end{definition}
 
 \begin{activity}{5}
-Let $T: \IR^2 \rightarrow \IR^3$ be given by the standard matrix $\begin{bmatrix} 1 & 0 \\ 0 & 1 \\ 0 & 0 \end{bmatrix}$.  Find the kernel of $T$.
+Let $T: \IR^2 \rightarrow \IR^3$ be given by
+\[
+  T\left(\begin{bmatrix}x \\ y \end{bmatrix} \right)
+    =
+  \begin{bmatrix} x \\ y \\ 0 \end{bmatrix}
+    \hspace{3em}
+    \text{with standard matrix }
+  \begin{bmatrix} 1 & 0 \\ 0 & 1 \\ 0 & 0 \end{bmatrix}
+\]
+Which of these subspaces of \(\IR^2\) describes \(\ker T\),
+the set of all vectors that transform into \(\vec 0\)?
+\begin{enumerate}[a)]
+\item \(\setBuilder{\begin{bmatrix}a \\ a\end{bmatrix}}{a\in\IR}\)
+\item \(\setList{\begin{bmatrix}0\\0\end{bmatrix}}\)
+\item \(\IR^2\)
+\end{enumerate}
 \end{activity}
 
 \begin{activity}{5}
-Let $T: \IR^3 \rightarrow \IR^2$ be given by the standard matrix $\begin{bmatrix} 1 & 0 &0  \\ 0 & 1 & 0 \end{bmatrix}$.  Find the kernel of $T$.
+Let $T: \IR^3 \rightarrow \IR^2$ be given by
+\[
+  T\left(\begin{bmatrix}x \\ y\\z \end{bmatrix} \right)
+    =
+  \begin{bmatrix} x \\ y \end{bmatrix}
+    \hspace{3em}
+    \text{with standard matrix }
+  \begin{bmatrix} 1 & 0 & 0 \\ 0 & 1 & 0 \end{bmatrix}
+\]
+Which of these subspaces of \(\IR^3\) describes \(\ker T\),
+the set of all vectors that transform into \(\vec 0\)?
+\begin{enumerate}[a)]
+\item \(\setBuilder{\begin{bmatrix}0 \\ 0\\ a\end{bmatrix}}{a\in\IR}\)
+\item \(\setBuilder{\begin{bmatrix}a \\ a\\ 0\end{bmatrix}}{a\in\IR}\)
+\item \(\setList{\begin{bmatrix}0\\0\\0\end{bmatrix}}\)
+\item \(\IR^3\)
+\end{enumerate}
 \end{activity}
 
 
 
 \begin{activity}{10}
-Let $T: \IR^3 \rightarrow \IR^2$ be the linear transformation given by the standard matrix $A=\begin{bmatrix} 3 & 4 & -1 \\ 1 & 2 & 1 \end{bmatrix}$.
+Let $T: \IR^3 \rightarrow \IR^2$ be the linear transformation given by the
+standard matrix
+\[A=\begin{bmatrix} 3 & 4 & -1 \\ 1 & 2 & 1 \end{bmatrix}.\]
 \begin{subactivity}
-Write a system of equations whose solution set is the kernel.
+Set
+\(
+  T\left(\begin{bmatrix}x\\y\\z\end{bmatrix}\right)
+    =
+  \begin{bmatrix}0\\0\end{bmatrix}
+\) to find a system of equations whose solution set is the kernel.
 \end{subactivity}
 \begin{subactivity}
-Use $\RREF(A)$ to solve the system of equations and find the kernel of \(T\).
-\end{subactivity}
-\begin{subactivity}
-Find a basis for the kernel of $T$.
+Use $\RREF(A)$ to solve this homogeneous system of equations and find a basis
+for the kernel of \(T\).
 \end{subactivity}
 \end{activity}
 
@@ -73,35 +219,108 @@ Find a basis for the kernel of $T$.
 Let $T: V \rightarrow W$ be a linear transformation.
 The \term{image} of $T$ is an important subspace of \(W\) defined by
 \[
-\Im T = \left\{ \vec{w} \in W\ \big|\ \text{there is some }v\in V \text{ with } T(\vec{v})=\vec{w}\right\}
+\Im T = \left\{ \vec{w} \in W\ \big|\ \text{there is some }\vec v\in V \text{ with } T(\vec{v})=\vec{w}\right\}
 \]
 \end{definition}
 
 \begin{activity}{5}
-Let $T: \IR^2 \rightarrow \IR^3$ be given by the standard matrix $\begin{bmatrix} 1 & 0 \\ 0 & 1 \\ 0 & 0 \end{bmatrix}$.  Find the image of $T$.
+Let $T: \IR^2 \rightarrow \IR^3$ be given by
+\[
+  T\left(\begin{bmatrix}x \\ y \end{bmatrix} \right)
+    =
+  \begin{bmatrix} x \\ y \\ 0 \end{bmatrix}
+    \hspace{3em}
+    \text{with standard matrix }
+  \begin{bmatrix} 1 & 0 \\ 0 & 1 \\ 0 & 0 \end{bmatrix}
+\]
+Which of these subspaces of \(\IR^3\) describes \(\Im T\),
+the set of all vectors that are the result of using \(T\) to transform
+\(\IR^2\) vectors?
+\begin{enumerate}[a)]
+\item \(\setBuilder{\begin{bmatrix}0 \\ 0\\a\end{bmatrix}}{a\in\IR}\)
+\item \(\setBuilder{\begin{bmatrix}a \\ b\\0\end{bmatrix}}{a,b\in\IR}\)
+\item \(\setList{\begin{bmatrix}1\\1\\0\end{bmatrix}}\)
+\item \(\IR^3\)
+\end{enumerate}
 \end{activity}
 
 \begin{activity}{5}
-Let $T: \IR^3 \rightarrow \IR^2$ be given by the standard matrix $\begin{bmatrix} 1 & 0 &0  \\ 0 & 1 & 0 \end{bmatrix}$.  Find the image of $T$.
+Let $T: \IR^3 \rightarrow \IR^2$ be given by
+\[
+  T\left(\begin{bmatrix}x \\ y\\z \end{bmatrix} \right)
+    =
+  \begin{bmatrix} x \\ y \end{bmatrix}
+    \hspace{3em}
+    \text{with standard matrix }
+  \begin{bmatrix} 1 & 0 & 0 \\ 0 & 1 & 0 \end{bmatrix}
+\]
+Which of these subspaces of \(\IR^2\) describes \(\Im T\),
+the set of all vectors that are the result of using \(T\) to transform
+\(\IR^3\) vectors?
+\begin{enumerate}[a)]
+\item \(\setBuilder{\begin{bmatrix}a \\ a\end{bmatrix}}{a\in\IR}\)
+\item \(\setList{\begin{bmatrix}1\\0\end{bmatrix}}\)
+\item \(\IR^2\)
+\end{enumerate}
+\end{activity}
+
+
+\begin{activity}{5}
+Let $T: \IR^4 \rightarrow \IR^3$ be the linear transformation given by the
+standard matrix
+\[
+  A
+    =
+  \begin{bmatrix} 3 & 4 & 7 & 1\\ -1 & 1 & 0 & 2 \\ 2 & 1 & 3 & -1 \end{bmatrix}
+    =
+  \begin{bmatrix}T(\vec e_1)&T(\vec e_2)&T(\vec e_3)&T(\vec e_4)\end{bmatrix}
+.\]
+
+Thus the set of vectors
+\[
+  \setList{
+    \begin{bmatrix}3\\-1\\2\end{bmatrix},
+    \begin{bmatrix}4\\1\\1\end{bmatrix},
+    \begin{bmatrix}7\\0\\3\end{bmatrix},
+    \begin{bmatrix}1\\2\\-1\end{bmatrix}
+  }
+\]
+\begin{enumerate}[a)]
+\item spans \(\Im T\)
+\item is a linearly independent subset of \(\Im T\)
+\item is a basis for \(\Im T\)
+\end{enumerate}
 \end{activity}
 
 
 \begin{activity}{10}
-Let $T: \IR^3 \rightarrow \IR^2$ be the linear transformation given by the standard matrix $A=\begin{bmatrix} 3 & 4 & -1 \\ 1 & 2 & 1 \end{bmatrix}$.
-\begin{subactivity}
-Find a convenient set of vectors \(S\subseteq\IR^2\) such that \(\vspan S=\Im T\).
-\end{subactivity}
-\begin{subactivity}
-Find a convenient basis for the image of $T$.
-\end{subactivity}
+Let $T: \IR^4 \rightarrow \IR^3$ be the linear transformation given by the
+standard matrix
+\[
+  A
+    =
+  \begin{bmatrix} 3 & 4 & 7 & 1\\ -1 & 1 & 0 & 2 \\ 2 & 1 & 3 & -1 \end{bmatrix}
+.\]
+
+Remove vectors from the set
+\[
+  \setList{
+    \begin{bmatrix}3\\-1\\2\end{bmatrix},
+    \begin{bmatrix}4\\1\\1\end{bmatrix},
+    \begin{bmatrix}7\\0\\3\end{bmatrix},
+    \begin{bmatrix}1\\2\\-1\end{bmatrix}
+  }
+\]
+spanning \(\Im T\) to get a basis for \(\Im T\).
 \end{activity}
 
 \begin{observation}
-Let $T: V \rightarrow W$ be a linear transformation with corresponding matrix $A$.
+Let  $T:\IR^n\to\IR^m$ be a linear transformation with standard matrix $A$.
 
 \begin{itemize}
-\item If $A$ is a matrix corresponding to $T$, the kernel is the solution set of the homogeneous system with coefficients given by $A$.
-\item If $A$ is a matrix corresponding to $T$, the image is the span of the columns of $A$.
+\item The kernel of \(T\) is the solution set of the homogeneous system given
+by the augmented matrix $\begin{bmatrix}[c|c]A&\vec 0\end{bmatrix}$.
+\item The image of \(T\) is the span of the columns of \(A\).
 \end{itemize}
 \end{observation}
 
